# forgottenserver-rust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.lua.dist  docker-compose.perf.yml  docker-compose.yml  globalevent  intentional_differences.yml
.github/workflows/: rust.yml
crates/common/: Cargo.toml
crates/common/benches/: crypto.rs
crates/common/src/: base64.rs  configmanager.rs  constants.rs  cylinder.rs  definitions.rs  enums.rs  fileloader.rs  item_property.rs  itemloader.rs  lib.rs  lockfree.rs  luavariant.rs  matrixarea.rs  networkmessage.rs  outputmessage.rs  position.rs  pugicast.rs  rsa.rs  thing.rs  thread_holder_base.rs  tools.rs  wildcardtree.rs  xtea.rs
crates/database/: Cargo.toml
crates/database/src/: database.rs  databasemanager.rs  databasetasks.rs  iologindata.rs  iomarket.rs  lib.rs  mariadb.rs
crates/database/tests/: mariadb_integration.rs
crates/e2e/: Cargo.toml
crates/entity/: Cargo.toml
crates/entity/benches/: conditions.rs
crates/entity/src/: bed.rs  creature.rs  guild.rs  lib.rs  monster.rs  monsters.rs  mounts.rs  npc.rs  party.rs  player.rs  podium.rs  spawn.rs  town.rs
crates/game/: Cargo.toml
crates/game/benches/: combat.rs
crates/game/src/: action_registry.rs  chat.rs  combat.rs  condition.rs  game.rs  game_loop.rs  lib.rs  market.rs  movement.rs  npc_registry.rs  party.rs  quest_registry.rs  spawn_manager.rs  spell_registry.rs  spells.rs  trade.rs  weapon_registry.rs  weapons.rs
crates/game/tests/fixtures/: spells.xml  weapons.xml
crates/game/tests/fixtures/npc/: blacksmith.xml  wanderer.xml
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: ledger.rs  lib.rs  lua_audit.rs  report.rs  transitions.rs
crates/items/: Cargo.toml
crates/map/: Cargo.toml
crates/network/: Cargo.toml
crates/network/benches/: codec.rs
crates/network/src/: ban.rs  connection.rs  lib.rs  protocol.rs  protocolgame.rs  protocolstatus.rs  server.rs
crates/network/tests/: protocol_integration.rs  wire_parity.rs
crates/network/tests/combat_misc/: mod.rs
crates/network/tests/container/: mod.rs
crates/network/tests/creature/: mod.rs
crates/network/tests/fixtures/: mod.rs
crates/network/tests/market/: mod.rs
crates/network/tests/player/: mod.rs
crates/network/tests/shop/: mod.rs
crates/network/tests/trade/: mod.rs
crates/network/tests/ui/: mod.rs
crates/perf-bot/: Cargo.toml
crates/perf-bot/src/: bot.rs  client.rs  lib.rs  main.rs  metrics.rs  reporter.rs
crates/perf-bot/src/scenarios/: breaking_point.rs  crowd.rs  full_chaos.rs  login_flood.rs  magic_storm.rs  mod.rs  monster_swarm.rs  npc_flood.rs  sustained_load.rs
crates/poketibia-server/: Cargo.toml  README.md
crates/poketibia-server/src/: boot.rs  lib.rs  main.rs
crates/poketibia-server/tests/: boot.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: actions.rs  baseevents.rs  chat_callbacks.rs  creatureevent.rs  engine.rs  error.rs  events.rs  globalevent.rs  lib.rs  lua_api.rs  luascript.rs  script.rs  script_environment.rs  scriptmanager.rs  talkaction.rs  value.rs
crates/scripting/src/lua_bindings/: misc_globals.rs  mod.rs  position.rs
crates/scripting/src/lua_bindings/classes/: action.rs  combat.rs  condition.rs  config_manager.rs  container.rs  creature.rs  creature_event.rs  db_insert.rs  db_transaction.rs  game.rs  global_event.rs  group.rs  guild.rs  house.rs  item.rs  item_type.rs  loot.rs  mod.rs  modal_window.rs  monster.rs  monster_spell.rs  monster_type.rs  move_event.rs  network_message.rs  npc.rs  outfit.rs  party.rs  player.rs  podium.rs  spell.rs  talk_action.rs  teleport.rs  tile.rs  variant.rs  vocation.rs  weapon.rs  xml_document.rs  xml_node.rs
crates/scripting/src/lua_bindings/enums/: account.rs  ammo.rs  callback_param.rs  client_os.rs  combat.rs  combat_param.rs  condition.rs  condition_id.rs  condition_param.rs  const_slot.rs  creature_event.rs  creature_icon.rs  creature_type.rs  direction.rs  distance_effect.rs  fight_mode.rs  flag.rs  fluid.rs  game_state.rs  item.rs  item_attribute.rs  item_group.rs  item_property.rs  magic_effect.rs  map_mark.rs  message.rs  misc.rs  mod.rs  monster_icon.rs  monsters_event.rs  origin.rs  player_flag.rs  player_sex.rs  podium.rs  reload.rs  report.rs  resource.rs  return_value.rs  skill.rs  skull.rs  (+12 more)
crates/scripting/src/lua_bindings/table_enums/: config_keys.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: admin_handler.rs  boot.rs  channel_session.rs  codec.rs  dispatcher.rs  game_handler.rs  game_state.rs  http.rs  http_cacheinfo.rs  http_connection_session.rs  http_error.rs  http_listener.rs  http_login.rs  http_router.rs  http_session.rs  lib.rs  map_description.rs  otserv.rs  scheduler.rs  signals.rs  status_handler.rs
crates/server/tests/: status_integration.rs
crates/tfs/: Cargo.toml  README.md
crates/world/: Cargo.toml
docker/: config-cpp-perf.lua  config-rust-perf.lua  config.lua
docker/mariadb-init/: 00-init-tibia-dbs.sh  10-bench-seed.sh
docker/poketibia-mariadb-init/: 00-init-tibia-dbs.sh
docs/performance/: README.md  perf-results.json
examples/otserver/: otserv-dump.sql
fixtures/: bench-seed.sql  bench-world-config.lua
flow_graph/: FLOW_GRAPH.md  GAP_REPORT.md  README.md  index.yml
flow_graph/nodes/: actions.h.yml  actions.yml  ban.h.yml  ban.yml  base64.h.yml  baseevents.h.yml  baseevents.yml  bed.h.yml  bed.yml  chat.h.yml  chat.yml  combat.h.yml  (+159 more)
scripts/: README.md  audit_missing_methods.sh  bench-status.sh  build_luascript_bindings.py  confirmed_stubs.json  confirmed_stubs_common.json  confirmed_stubs_entity.json  confirmed_stubs_items.json  confirmed_stubs_map.json  confirmed_stubs_small_crates.json  extract_entity_symbols.py  find_stubs.py  smoke.sh  stub_report.json  stub_report_structured.json  stub_triage.json  stub_triage_common.json  stub_triage_entity.json  stub_triage_items.json  stub_triage_map.json  stub_triage_small_crates.json  test_find_stubs.py  update-perf-readme.sh
scripts/manifest_extractor/: Cargo.toml
scripts/manifest_extractor/src/: main.rs
(+218 files in other folders)
