[workspace]
members = [
    "crates/common",
    "crates/items",
    "crates/map",
    "crates/entity",
    "crates/world",
    "crates/database",
    "crates/game",
    "crates/scripting",
    "crates/network",
    "crates/server",
    "crates/tfs",
    "crates/harness-tools",
    "crates/e2e",
    "crates/perf-bot",
]
resolver = "2"

# ── Workspace-wide dependency versions ──────────────────────────────────────
# Crates opt in via `dep = { workspace = true, features = [...] }` so every
# member uses the same version of shared deps without listing them per-crate.
[workspace.dependencies]
anyhow      = "1"
criterion   = { version = "0.5", features = ["html_reports"] }
libc        = "0.2"
thiserror   = "1"

# Harness + MariaDB adapter (Phase 4 of forgottenserver-rust-equivalence-harness).
# sqlx + tokio land here so the database crate's `mariadb` feature can compile
# the production backend. testcontainers is only used by integration tests
# (gated behind the `mariadb-integration` feature on the database crate).
tokio          = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx           = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "any"] }
testcontainers = { version = "0.20" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
similar        = "2"
regex          = "1"
walkdir        = "2"
httparse       = "1"
rand           = "0.8"
