[package]
name = "forgottenserver-common"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
rsa = { version = "0.9", features = ["pem", "hazmat"] }
num-bigint = "0.4"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "crypto"
harness = false
