[package]
name = "forgottenserver-entity"
version = "0.1.0"
edition = "2021"

[dependencies]
forgottenserver-common = { path = "../common" }
forgottenserver-items = { path = "../items" }
forgottenserver-map = { path = "../map" }
roxmltree = "0.20"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "conditions"
harness = false
