[package]
name = "harness-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harness-ledger-writer"
path = "src/bin/harness_ledger_writer.rs"

[[bin]]
name = "lua-static-audit"
path = "src/bin/lua_static_audit.rs"

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
similar    = { workspace = true }
regex      = { workspace = true }
walkdir    = { workspace = true }
