[package]
name = "forgottenserver-network"
version = "0.1.0"
edition = "2021"

[dependencies]
forgottenserver-common = { path = "../common" }
forgottenserver-items = { path = "../items" }
forgottenserver-entity = { path = "../entity" }
forgottenserver-game = { path = "../game" }
forgottenserver-scripting = { path = "../scripting" }
