[package]
name = "forgottenserver-scripting"
version = "0.1.0"
edition = "2021"

[features]
default = ["lua-scripting"]
lua-scripting = ["dep:mlua"]

[dependencies]
forgottenserver-common = { path = "../common" }
forgottenserver-items = { path = "../items" }
forgottenserver-map = { path = "../map" }
forgottenserver-entity = { path = "../entity" }
forgottenserver-game = { path = "../game" }
forgottenserver-world = { path = "../world" }
thiserror = "1"
roxmltree = "0.20"
mlua = { version = "0.9", features = ["lua54", "vendored"], optional = true }

[dev-dependencies]
tempfile = "3"
