[package]
name = "forgottenserver-server"
version = "0.1.0"
edition = "2021"

[dependencies]
forgottenserver-common = { path = "../common" }
forgottenserver-items = { path = "../items" }
forgottenserver-map = { path = "../map" }
forgottenserver-entity = { path = "../entity" }
forgottenserver-world = { path = "../world" }
forgottenserver-database = { path = "../database" }
forgottenserver-game = { path = "../game" }
forgottenserver-scripting = { path = "../scripting", features = ["lua-scripting"] }
forgottenserver-network = { path = "../network" }

[dev-dependencies]
tempfile = "3"
