[package]
name = "manifest_extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manifest_extractor"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"

[profile.release]
opt-level = 2
lto = false
debug = false

[workspace]

